[package]
name = "hello_macro_derive"
version = "0.0.0-develop"
authors = ["kflange <zknsftk1msrk@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
